Añadir exportación predeterminada de AppIcons y traducir cadenas de texto en archivos JSON

--- a/ui/src/locales/en/common.json
+++ b/ui/src/locales/en/common.json
@@ -1,5 +1,6 @@
 {
-    "home": "Home",
-    "user": "User",
-    "switchLng": "Switch to {locale, select, de {Spanish} en {English} other {Unknown}}"
-  }
+  "home": "Home",
+  "user": "User",
+  "switchLng": "Switch to {locale, select, de {Spanish} en {English} other {Unknown}}",
+  "item": "Item"
+}
