Traducción de cadenas de idioma al español

--- a/ui/src/locales/en/common.json
+++ b/ui/src/locales/en/common.json
@@ -2,5 +2,5 @@
   "home": "Home",
   "user": "User",
   "switchLng": "Switch to {locale, select, de {Spanish} en {English} other {Unknown}}",
-  "item": "Item"
+  "item": "Item en"
 }
