chore: Update language strings to Spanish

--- a/ui/src/locales/es/common.json
+++ b/ui/src/locales/es/common.json
@@ -2,5 +2,43 @@
   "home": "Inicio",
   "user": "Usuarios",
   "switchLng": "Cambiar idioma a {locale, select, de {Español} en {Inglés} other {Unknown}}",
-  "item":"Item"
+  "item": "Item",
+  "components": "Componentes",
+  "imputs": "Entradas",
+  "buttons": "Botones",
+  "selects": "Selects",
+  "tables": "Tablas",
+  "modals": "Modales",
+  "forms": "Formularios",
+  "alerts": "Alertas",
+  "toasts": "Toasts",
+  "snackbars": "Snackbars",
+  "dialogs": "Diálogos",
+  "chips": "Chips",
+  "progress": "Progreso",
+  "icons": "Iconos",
+  "typography": "Tipografía",
+  "colors": "Colores",
+  "themes": "Temas",
+  "layouts": "Diseños",
+  "responsive": "Responsivo",
+  "rtl": "RTL",
+  "animations": "Animaciones",
+  "darkMode": "Modo oscuro",
+  "settings": "Configuraciones",
+  "profile": "Perfil",
+  "permissionDenied": "Permiso denegado",
+  "errorEnumeratingDevices": "Error enumerando dispositivos",
+  "errorAccessingCamera": "Error accediendo a la cámara",
+  "startCamaera": "Iniciar cámara",
+  "selectCamera": "Seleccionar cámara",
+  "noOptions": "Sin opciones",
+  "dragAndDropText": "Arrastra y suelta un archivo aquí",
+  "selectFile": "Seleccionar archivo",
+  "takePhoto": "Tomar foto",
+  "takePhoto_other": "Tomar {count} fotos",
+  "rowsPerPage": "Filas por página",
+  "of": "de",
+  "cancel": "Cancelar",
+  "viewPdf": "Ver PDF"
 }
