feat: Add section to menu routes in ListMenu component

--- a/ui/src/locales/es/common.json
+++ b/ui/src/locales/es/common.json
@@ -5,18 +5,13 @@
   "item": "Item",
   "components": "Componentes",
   "imputs": "Entradas",
-  "buttons": "Botones",
   "selects": "Selects",
   "tables": "Tablas",
   "modals": "Modales",
   "forms": "Formularios",
   "alerts": "Alertas",
   "toasts": "Toasts",
-  "snackbars": "Snackbars",
-  "dialogs": "Diálogos",
-  "chips": "Chips",
   "progress": "Progreso",
-  "icons": "Iconos",
   "typography": "Tipografía",
   "colors": "Colores",
   "themes": "Temas",
@@ -40,5 +35,42 @@
   "rowsPerPage": "Filas por página",
   "of": "de",
   "cancel": "Cancelar",
-  "viewPdf": "Ver PDF"
+  "viewPdf": "Ver PDF",
+  "uiComponents": "Componentes de UI",
+  "elements": "Elementos",
+  "buttons": "Botones",
+  "dropDowns": "Desplegables",
+  "icons": "Iconos",
+  "badges": "Insignias",
+  "cards": "Tarjetas",
+  "dataTable": "Tabla de datos",
+  "progressBars": "Barras de progreso",
+  "switches": "Interruptores",
+  "toolTips": "Consejos",
+  "pagination": "Paginación",
+  "slider": "Deslizador",
+  "snackbars": "Snackbars",
+  "chips": "Chips",
+  "dialogs": "Diálogos",
+  "tabs": "Pestañas",
+  "acordions": "Acordeones",
+  "carrousel": "Carrusel",
+  "progesBar": "Barra de progreso",
+  "imageViewer": "Visor de imágenes",
+  "uploadFile": "Subir archivo",
+  "notification": "Notificación",
+  "menu": "Menú",
+  "skeleton": "Esqueleto",
+  "typograpy": "Tipografía",
+  "alert": "Alerta",
+  "autocomplete": "Autocompletar",
+  "avatar": "Avatar",
+  "textFields": "Campos de texto",
+  "numericField": "Campo numérico",
+  "telInput": "Entrada de teléfono",
+  "searchInput": "Entrada de búsqueda",
+  "checkboxes": "Casilla de verificación",
+  "radios": "Radios",
+  "calendar": "Calendario",
+  "snackbar": "Snackbar"
 }
