Actualización de idioma al español en archivos de localización

--- a/ui/src/locales/es/common.json
+++ b/ui/src/locales/es/common.json
@@ -72,5 +72,6 @@
   "checkboxes": "Casilla de verificación",
   "radios": "Radios",
   "calendar": "Calendario",
-  "snackbar": "Snackbar"
+  "snackbar": "Snackbar",
+  "logout": "Cerrar sesión"
 }
