chore: Update npm dependency to latest stable version

--- a/ui/src/locales/es/components.json
+++ b/ui/src/locales/es/components.json
@@ -40,5 +40,10 @@
     "smallTextField": "Campo de texto pequeño",
     "mediumTextField": "Campo de texto mediano",
     "largeTextField": "Campo de texto grande",
-    "variants": "Variantes"
+    "variants": "Variantes",
+    "selects": "Seleccionar",
+    "numbers": "Números",
+    "phone": "Teléfono",
+    "coins": "Monedas",
+    "typesInputs": "Tipos de entradas"
 }
