chore: Update menuRoutes link in Aside component and add defaultOpen prop to IMenuRoute

--- a/ui/src/locales/es/common.json
+++ b/ui/src/locales/es/common.json
@@ -4,7 +4,7 @@
   "switchLng": "Cambiar idioma a {locale, select, de {Español} en {Inglés} other {Unknown}}",
   "item": "Item",
   "components": "Componentes",
-  "imputs": "Entradas",
+  "inputs": "Entradas",
   "selects": "Selects",
   "tables": "Tablas",
   "modals": "Modales",
@@ -25,7 +25,7 @@
   "permissionDenied": "Permiso denegado",
   "errorEnumeratingDevices": "Error enumerando dispositivos",
   "errorAccessingCamera": "Error accediendo a la cámara",
-  "startCamaera": "Iniciar cámara",
+  "startCamera": "Iniciar cámara",
   "selectCamera": "Seleccionar cámara",
   "noOptions": "Sin opciones",
   "dragAndDropText": "Arrastra y suelta un archivo aquí",
@@ -53,15 +53,14 @@
   "chips": "Chips",
   "dialogs": "Diálogos",
   "tabs": "Pestañas",
-  "acordions": "Acordeones",
+  "accordions": "Acordeones",
   "carrousel": "Carrusel",
-  "progesBar": "Barra de progreso",
+  "progressBar": "Barra de progreso",
   "imageViewer": "Visor de imágenes",
   "uploadFile": "Subir archivo",
   "notification": "Notificación",
   "menu": "Menú",
   "skeleton": "Esqueleto",
-  "typograpy": "Tipografía",
   "alert": "Alerta",
   "autocomplete": "Autocompletar",
   "avatar": "Avatar",
@@ -73,5 +72,6 @@
   "radios": "Radios",
   "calendar": "Calendario",
   "snackbar": "Snackbar",
-  "logout": "Cerrar sesión"
+  "logout": "Cerrar sesión",
+  "all": "Todos"
 }
