feat: Add "editors" to the menu routes

--- a/ui/src/locales/es/common.json
+++ b/ui/src/locales/es/common.json
@@ -79,5 +79,6 @@
   "uploadMultipleFiles": "Subir múltiples archivos",
   "uploadAnyFile": "Subir cualquier archivo",
   "takePhotoWithCamera": "Tomar foto con cámara",
-  "search": "Buscar"
+  "search": "Buscar",
+  "editors": "Editores"
 }
