--- a/ui/src/locales/en/common.json
+++ b/ui/src/locales/en/common.json
@@ -2,5 +2,8 @@
   "home": "Home",
   "user": "User",
   "switchLng": "Switch to {locale, select, de {Spanish} en {English} other {Unknown}}",
-  "item": "Item en"
+  "item": "Item en",
+  "login": "Login",
+  "email": "Email",
+  "password": "Password"
 }
