--- a/ui/src/locales/es/common.json
+++ b/ui/src/locales/es/common.json
@@ -80,5 +80,8 @@
   "uploadAnyFile": "Subir cualquier archivo",
   "takePhotoWithCamera": "Tomar foto con cámara",
   "search": "Buscar",
-  "editors": "Editores"
+  "editors": "Editores",
+  "login": "Iniciar sesión",
+  "email": "Correo electrónico",
+  "password": "Contraseña"
 }
