--- a/ui/src/i18n/locales/es/common.json
+++ b/ui/src/i18n/locales/es/common.json
@@ -83,5 +83,6 @@
   "editors": "Editores",
   "login": "Iniciar sesión",
   "email": "Correo electrónico",
-  "password": "Contraseña"
+  "password": "Contraseña",
+  "dragAndDrop": "Arrastrar y soltar"
 }
