Agregar soporte para la internacionalización y refactorizar archivos de configuración

--- a/ui/src/i18n/locales/en/common.json
+++ b/ui/src/i18n/locales/en/common.json
@@ -1,9 +1,14 @@
 {
-  "home": "Home",
-  "user": "User",
-  "switchLng": "Switch to {locale, select, de {Spanish} en {English} other {Unknown}}",
-  "item": "Item en",
-  "login": "Login",
-  "email": "Email",
-  "password": "Password"
+	"home": "Home",
+	"user": "User",
+	"switchLng": "Switch to {locale, select, de {Spanish} en {English} other {Unknown}}",
+	"item": "Item en",
+	"login": "Login",
+	"email": "Email",
+	"password": "Password",
+	"confirmPassword": "Confirm Password",
+	"submit": "Submit",
+	"components": "Components",
+	"inputs": "Inputs",
+	"selects": "Selects"
 }
