--- a/ui/src/i18n/locales/es/common.json
+++ b/ui/src/i18n/locales/es/common.json
@@ -1,96 +1,99 @@
 {
-  "home": "Inicio",
-  "user": "Usuarios",
-  "switchLng": "Cambiar idioma a {locale, select, de {Español} en {Inglés} other {Unknown}}",
-  "item": "Item",
-  "components": "Componentes",
-  "inputs": "Entradas",
-  "selects": "Selects",
-  "tables": "Tablas",
-  "modals": "Modales",
-  "forms": "Formularios",
-  "alerts": "Alertas",
-  "toasts": "Toasts",
-  "progress": "Progreso",
-  "typography": "Tipografía",
-  "colors": "Colores",
-  "themes": "Temas",
-  "layouts": "Diseños",
-  "responsive": "Responsivo",
-  "rtl": "RTL",
-  "animations": "Animaciones",
-  "darkMode": "Modo oscuro",
-  "settings": "Configuraciones",
-  "profile": "Perfil",
-  "permissionDenied": "Permiso denegado",
-  "errorEnumeratingDevices": "Error enumerando dispositivos",
-  "errorAccessingCamera": "Error accediendo a la cámara",
-  "startCamera": "Iniciar cámara",
-  "selectCamera": "Seleccionar cámara",
-  "noOptions": "Sin opciones",
-  "dragAndDropText": "Arrastra y suelta un archivo aquí",
-  "selectFile": "Seleccionar archivo",
-  "takePhoto": "Tomar foto",
-  "takePhoto_other": "Tomar {count} fotos",
-  "rowsPerPage": "Filas por página",
-  "of": "de",
-  "cancel": "Cancelar",
-  "viewPdf": "Ver PDF",
-  "uiComponents": "Componentes de UI",
-  "elements": "Elementos",
-  "buttons": "Botones",
-  "dropDowns": "Desplegables",
-  "icons": "Iconos",
-  "badges": "Insignias",
-  "cards": "Tarjetas",
-  "dataTable": "Tabla de datos",
-  "progressBars": "Barras de progreso",
-  "switches": "Interruptores",
-  "toolTips": "Consejos",
-  "pagination": "Paginación",
-  "slider": "Deslizador",
-  "snackbars": "Snackbars",
-  "chips": "Chips",
-  "dialogs": "Diálogos",
-  "tabs": "Pestañas",
-  "accordions": "Acordeones",
-  "carrousel": "Carrusel",
-  "progressBar": "Barra de progreso",
-  "imageViewer": "Visor de imágenes",
-  "uploadFile": "Subir archivo",
-  "notification": "Notificación",
-  "menu": "Menú",
-  "skeleton": "Esqueleto",
-  "alert": "Alerta",
-  "autocomplete": "Autocompletar",
-  "avatar": "Avatar",
-  "textFields": "Campos de texto",
-  "numericField": "Campo numérico",
-  "telInput": "Entrada de teléfono",
-  "searchInput": "Entrada de búsqueda",
-  "checkboxes": "Casilla de verificación",
-  "radios": "Radios",
-  "calendar": "Calendario",
-  "snackbar": "Snackbar",
-  "logout": "Cerrar sesión",
-  "all": "Todos",
-  "fileSizeExceeded": "El tamaño del archivo excede el límite permitido de: {size}MB y el archivo tiene: {fileSize}MB, por favor comprime tú archivo.",
-  "fileNotValid": "El tipo de archivo no es permitido, por favor selecciona un archivo válido.",
-  "uploadMultipleFiles": "Subir múltiples archivos",
-  "uploadAnyFile": "Subir cualquier archivo",
-  "takePhotoWithCamera": "Tomar foto con cámara",
-  "search": "Buscar",
-  "editors": "Editores",
-  "login": "Iniciar sesión",
-  "email": "Correo electrónico",
-  "password": "Contraseña",
-  "dragAndDrop": "Arrastrar y soltar",
-  "users": "Usuarios",
-  "userModule": "Módulo de usuarios",
-  "add": "Agregar",
-  "edit": "Editar",
-  "delete": "Eliminar",
-  "save": "Guardar",
-  "list": "Listar",
-  "view": "Ver"
+	"home": "Inicio",
+	"user": "Usuarios",
+	"switchLng": "Cambiar idioma a {locale, select, de {Español} en {Inglés} other {Unknown}}",
+	"item": "Item",
+	"components": "Componentes",
+	"inputs": "Entradas",
+	"selects": "Selects",
+	"tables": "Tablas",
+	"modals": "Modales",
+	"forms": "Formularios",
+	"alerts": "Alertas",
+	"toasts": "Toasts",
+	"progress": "Progreso",
+	"typography": "Tipografía",
+	"colors": "Colores",
+	"themes": "Temas",
+	"layouts": "Diseños",
+	"responsive": "Responsivo",
+	"rtl": "RTL",
+	"animations": "Animaciones",
+	"darkMode": "Modo oscuro",
+	"settings": "Configuraciones",
+	"profile": "Perfil",
+	"permissionDenied": "Permiso denegado",
+	"errorEnumeratingDevices": "Error enumerando dispositivos",
+	"errorAccessingCamera": "Error accediendo a la cámara",
+	"startCamera": "Iniciar cámara",
+	"selectCamera": "Seleccionar cámara",
+	"noOptions": "Sin opciones",
+	"dragAndDropText": "Arrastra y suelta un archivo aquí",
+	"selectFile": "Seleccionar archivo",
+	"takePhoto": "Tomar foto",
+	"takePhoto_other": "Tomar {count} fotos",
+	"rowsPerPage": "Filas por página",
+	"of": "de",
+	"cancel": "Cancelar",
+	"viewPdf": "Ver PDF",
+	"uiComponents": "Componentes de UI",
+	"elements": "Elementos",
+	"buttons": "Botones",
+	"dropDowns": "Desplegables",
+	"icons": "Iconos",
+	"badges": "Insignias",
+	"cards": "Tarjetas",
+	"dataTable": "Tabla de datos",
+	"progressBars": "Barras de progreso",
+	"switches": "Interruptores",
+	"toolTips": "Consejos",
+	"pagination": "Paginación",
+	"slider": "Deslizador",
+	"snackbars": "Snackbars",
+	"chips": "Chips",
+	"dialogs": "Diálogos",
+	"tabs": "Pestañas",
+	"accordions": "Acordeones",
+	"carrousel": "Carrusel",
+	"progressBar": "Barra de progreso",
+	"imageViewer": "Visor de imágenes",
+	"uploadFile": "Subir archivo",
+	"notification": "Notificación",
+	"menu": "Menú",
+	"skeleton": "Esqueleto",
+	"alert": "Alerta",
+	"autocomplete": "Autocompletar",
+	"avatar": "Avatar",
+	"textFields": "Campos de texto",
+	"numericField": "Campo numérico",
+	"telInput": "Entrada de teléfono",
+	"searchInput": "Entrada de búsqueda",
+	"checkboxes": "Casilla de verificación",
+	"radios": "Radios",
+	"calendar": "Calendario",
+	"snackbar": "Snackbar",
+	"logout": "Cerrar sesión",
+	"all": "Todos",
+	"fileSizeExceeded": "El tamaño del archivo excede el límite permitido de: {size}MB y el archivo tiene: {fileSize}MB, por favor comprime tú archivo.",
+	"fileNotValid": "El tipo de archivo no es permitido, por favor selecciona un archivo válido.",
+	"uploadMultipleFiles": "Subir múltiples archivos",
+	"uploadAnyFile": "Subir cualquier archivo",
+	"takePhotoWithCamera": "Tomar foto con cámara",
+	"search": "Buscar",
+	"editors": "Editores",
+	"login": "Iniciar sesión",
+	"email": "Correo electrónico",
+	"password": "Contraseña",
+	"confirmPassword": "Confirmar contraseña",
+	"dragAndDrop": "Arrastrar y soltar",
+	"users": "Usuarios",
+	"userModule": "Módulo de usuarios",
+	"add": "Agregar",
+	"edit": "Editar",
+	"delete": "Eliminar",
+	"save": "Guardar",
+	"list": "Listar",
+	"view": "Ver",
+	"submit": "Enviar",
+	"resetPassword": "Restablecer contraseña"
 }
