Agregar soporte para la internacionalización en inglés y español; crear enumeraciones para tipos de usuario, estado y permisos; actualizar la estructura de mensajes y eliminar archivos obsoletos.

--- a/ui-v2/src/i18n/messages/es/common.json
+++ b/ui-v2/src/i18n/messages/es/common.json
@@ -96,5 +96,8 @@
 	"view": "Ver",
 	"submit": "Enviar",
 	"resetPassword": "Restablecer contraseña",
-	"update": "Actualizar"
+	"update": "Actualizar",
+	"dashboard": "Tablero",
+	"spanish": "Español",
+	"english": "Inglés"
 }
