Refactor componentes de entrada y mejorar la estructura; agregar soporte para mensajes de ayuda y etiquetas, y actualizar estilos de botones en el conmutador de idioma.

--- a/ui-v2/src/i18n/messages/es/elements.json
+++ b/ui-v2/src/i18n/messages/es/elements.json
@@ -40,5 +40,12 @@
 	"muted": "Silenciado",
 	"list": "Lista",
 	"blockquote": "Cita",
-	"headings": "Encabezados"
+	"headings": "Encabezados",
+	"solid": "Sólido",
+	"link": "Enlace",
+	"textField": "Campo de texto",
+	"types": "Tipos",
+	"variant": "{count, plural, =1 {Variante} other {Variantes}}",
+	"standard": "Estándar",
+	"filled": "Relleno"
 }
