Actualizar componentes de interfaz de usuario; agregar nuevos estilos de botones y variantes, mejorar la estructura de los elementos de entrada y agregar soporte para iconos.

--- a/ui-v2/src/i18n/messages/es/elements.json
+++ b/ui-v2/src/i18n/messages/es/elements.json
@@ -47,5 +47,6 @@
 	"types": "Tipos",
 	"variant": "{count, plural, =1 {Variante} other {Variantes}}",
 	"standard": "Estándar",
-	"filled": "Relleno"
+	"filled": "Relleno",
+	"icons": "Iconos"
 }
