Agregar componente de selección y soporte para opciones; actualizar traducciones y estilos en la interfaz de usuario.

--- a/ui-v2/src/i18n/messages/es/elements.json
+++ b/ui-v2/src/i18n/messages/es/elements.json
@@ -48,5 +48,7 @@
 	"variant": "{count, plural, =1 {Variante} other {Variantes}}",
 	"standard": "Estándar",
 	"filled": "Relleno",
-	"icons": "Iconos"
+	"icons": "Iconos",
+	"select": "Seleccionar",
+	"selectAnOption": "Seleccionar una opción"
 }
