Agregar componente de selección principal; actualizar traducciones y mejorar la estructura de los elementos de entrada.

--- a/ui-v2/src/i18n/messages/es/elements.json
+++ b/ui-v2/src/i18n/messages/es/elements.json
@@ -50,5 +50,6 @@
 	"filled": "Relleno",
 	"icons": "Iconos",
 	"select": "Seleccionar",
-	"selectAnOption": "Seleccionar una opción"
+	"selectAnOption": "Seleccionar una opción",
+	"noOptions": "Sin opciones"
 }
