Agregar soporte para selección múltiple y nuevos íconos en los componentes de selección; actualizar estilos y estructura de la interfaz de usuario.

--- a/ui-v2/src/i18n/messages/es/elements.json
+++ b/ui-v2/src/i18n/messages/es/elements.json
@@ -51,5 +51,6 @@
 	"icons": "Iconos",
 	"select": "Seleccionar",
 	"selectAnOption": "Seleccionar una opción",
-	"noOptions": "Sin opciones"
+	"noOptions": "Sin opciones",
+	"multiselect": "Selección múltiple"
 }
