Renombrar variante de botón de "outlined" a "outline"; actualizar estilos de variantes en componentes de botón y selección; corregir traducción en español para la variante de botón.

--- a/ui-v2/src/i18n/messages/es/elements.json
+++ b/ui-v2/src/i18n/messages/es/elements.json
@@ -1,7 +1,7 @@
 {
 	"button": "{count, plural, =1 {Botón} other {Botones}}",
 	"contained": "Contenido",
-	"outlined": "Contorno",
+	"outline": "Contorno",
 	"text": "Texto",
 	"sizes": "Tamaños",
 	"small": "Pequeño",
