advances in the ui-v2

--- a/ui-v2/src/i18n/messages/es/elements.json
+++ b/ui-v2/src/i18n/messages/es/elements.json
@@ -52,5 +52,7 @@
 	"select": "Seleccionar",
 	"selectAnOption": "Seleccionar una opción",
 	"noOptions": "Sin opciones",
-	"multiselect": "Selección múltiple"
+	"multiselect": "Selección múltiple",
+	"checkbox": "Casilla de verificación",
+	"calendar": "Calendario"
 }
