Agregar soporte para insignias y grupos de radio; actualizar traducciones y reorganizar componentes en la interfaz de usuario.

--- a/ui-v2/src/i18n/messages/es/common.json
+++ b/ui-v2/src/i18n/messages/es/common.json
@@ -99,5 +99,6 @@
 	"update": "Actualizar",
 	"dashboard": "Tablero",
 	"spanish": "Español",
-	"english": "Inglés"
+	"english": "Inglés",
+	"badge": "Insignia"
 }
