--- a/ui-v2/src/i18n/messages/es/elements.json
+++ b/ui-v2/src/i18n/messages/es/elements.json
@@ -54,5 +54,10 @@
 	"noOptions": "Sin opciones",
 	"multiselect": "Selección múltiple",
 	"checkbox": "Casilla de verificación",
-	"calendar": "Calendario"
+	"calendar": "Calendario",
+	"badge": "Insignia",
+	"card": "Tarjeta",
+	"menu": "Menú",
+	"dialog": "Diálogo",
+	"toast": "Tostada"
 }
