Agregar soporte para el componente Toaster, actualizar traducciones y eliminar la página de Snackbar; mejorar estilos y agregar nuevos elementos en la interfaz de usuario.

--- a/ui-v2/src/i18n/messages/es/common.json
+++ b/ui-v2/src/i18n/messages/es/common.json
@@ -100,5 +100,6 @@
 	"dashboard": "Tablero",
 	"spanish": "Español",
 	"english": "Inglés",
-	"badge": "Insignia"
+	"badge": "Insignia",
+	"toast": "Tostada"
 }
