Agregar constantes para códigos de países, tamaños, errores y reglas de formulario; incluir un nuevo componente de relación de aspecto y datos falsos para sugerencias y ejemplos de grupos de checkbox.

--- a/ui-v2/src/i18n/messages/es/elements.json
+++ b/ui-v2/src/i18n/messages/es/elements.json
@@ -66,5 +66,9 @@
 	"forms": "Formularios",
 	"skeleton": "Esqueleto",
 	"editors": "Editores",
-	"dragAndDrop": "Arrastrar y soltar"
+	"dragAndDrop": "Arrastrar y soltar",
+	"uploadAnyFile": "Subir cualquier archivo",
+	"uploadMultipleFiles": "Subir varios archivos",
+	"takePhotoWithCamera": "Tomar una foto con la cámara",
+	"takePhoto": "Tomar una foto"
 }
