* Migración a tailwind 4 * Manejo de formato next intl * manejo de error next intl y timezone

--- a/ui-v2/src/i18n/messages/en/common.json
+++ b/ui-v2/src/i18n/messages/en/common.json
@@ -99,5 +99,7 @@
 	"update": "Update",
 	"dashboard": "Dashboard",
 	"spanish": "Spanish",
-	"english": "English"
+	"english": "English",
+	"badge": "Badge",
+	"toast": "Toast"
 }
